--- a/proposal-web/netlify.toml
+++ b/proposal-web/netlify.toml
@@ -1,16 +1,11 @@
 [build]
   command = "npm run build"
+  publish = "out"
   functions = "netlify/functions"
-  publish = ".next"
 
 [dev]
-  command = "npm run dev"
-  port = 3000
-
-[[redirects]]
-  from = "/*"
-  to = "/"
-  status = 200
+  command = "next dev -p 3000"
+  functions = "netlify/functions"
 
 [context.production.environment]
   NODE_ENV = "production"
