--- a/proposal-web/package.json
+++ b/proposal-web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "urbanisma-propuesta-web",
+  "name": "Urbanisima-propuesta-web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,18 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.19.0",
     "framer-motion": "^12.23.24",
-    "next": "14.2.5",
+    "jspdf": "^3.0.3",
+    "next": "^14.2.33",
+    "prisma": "^6.19.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
+    "@netlify/functions": "^5.1.0",
+    "@netlify/plugin-nextjs": "^5.14.5",
     "@types/node": "24.10.1",
     "@types/react": "19.2.4",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
+    "netlify-cli": "^23.11.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.6.3"
