feat: unificar paleta corporativa (rojo/negro/dorado), extraer tipos y hook useSnapshots para reutilización

--- a/proposal-web/package.json
+++ b/proposal-web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Urbanisima-propuesta-web",
+  "name": "Urbanísima-propuesta-web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
