--- a/proposal-web/package.json
+++ b/proposal-web/package.json
@@ -16,7 +16,8 @@
     "prisma": "^6.19.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@netlify/functions": "^5.1.0",
