--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
-# example netlify.toml
 [build]
+  base = "proposal-web"
   command = "npm run build"
-  functions = "proposal-web\netlify\functions"
+  functions = "netlify/functions"
   publish = ".next"
 
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
