perf: change Next.js output from export to standalone for faster Netlify deploys

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
   base = "proposal-web"
   command = "npm run build"
   functions = "netlify/functions"
-  publish = ".next"
+  publish = ".next/standalone"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
