--- a/proposal-web/package.json
+++ b/proposal-web/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "echo 'Linting disabled for production build'",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate deploy",
+    "prebuild": "npm run prisma:generate"
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
@@ -20,14 +23,9 @@
     "sharp": "^0.34.5"
   },
   "devDependencies": {
-    "@netlify/functions": "^5.1.0",
-    "@netlify/plugin-nextjs": "^5.14.5",
     "@types/node": "24.10.1",
     "@types/react": "19.2.4",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.5",
-    "netlify-cli": "^23.11.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.6.3"
