--- a/proposal-web/package.json
+++ b/proposal-web/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run prisma:generate && next build",
+    "postbuild": "npm run prisma:migrate:ci",
     "start": "next start",
     "lint": "echo 'Linting disabled for production build'",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate deploy",
-    "prebuild": "npm run prisma:generate"
+    "prisma:migrate:ci": "prisma migrate deploy --skip-generate || true"
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
