--- a/proposal-web/package.json
+++ b/proposal-web/package.json
@@ -13,7 +13,9 @@
     "prisma:migrate:ci": "prisma migrate deploy"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.2",
     "@prisma/client": "^6.19.0",
+    "@vercel/postgres": "^0.10.0",
     "framer-motion": "^12.23.24",
     "jspdf": "^3.0.3",
     "next": "^14.2.33",
