--- a/proposal-web/package.json
+++ b/proposal-web/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
     "@prisma/client": "^6.19.0",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/postgres": "^0.10.0",
     "framer-motion": "^12.23.24",
     "jspdf": "^3.0.3",
