--- a/proposal-web/package.json
+++ b/proposal-web/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^6.19.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/postgres": "^0.10.0",
+    "@vercel/speed-insights": "^1.2.0",
     "framer-motion": "^12.23.24",
     "jspdf": "^3.0.3",
     "next": "^14.2.33",
