--- a/netlify.toml
+++ b/netlify.toml
@@ -1,25 +1,18 @@
 [build]
-  base = "proposal-web"
   command = "npm run build"
-  functions = "netlify/functions"
   publish = ".next"
+  functions = "netlify/functions"
 
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
-  version = "5.14.5"
+[dev]
+  command = "next dev -p 3000"
+  functions = "netlify/functions"
 
-  ## Uncomment to use this redirect for Single Page Applications like create-react-app.
-  ## Not needed for static site generators.
-  #[[redirects]]
-  #  from = "/*"
-  #  to = "/index.html"
-  #  status = 200
+[context.production.environment]
+  NODE_ENV = "production"
+  STORAGE_POSTGRES_PRISMA_URL = "@STORAGE_POSTGRES_PRISMA_URL"
+  STORAGE_POSTGRES_URL_NON_POOLING = "@STORAGE_POSTGRES_URL_NON_POOLING"
 
-  ## (optional) Settings for Netlify Dev
-  ## https://github.com/netlify/cli/blob/main/docs/netlify-dev.md#project-detection
-  #[dev]
-  #  command = "yarn start" # Command to start your dev server
-  #  port = 3000 # Port that the dev server will be listening on
-  #  publish = "dist" # Folder with the static content for _redirect file
-
-  ## more info on configuring this file: https://ntl.fyi/file-based-build-config
+[context.deploy-preview.environment]
+  NODE_ENV = "development"
+  STORAGE_POSTGRES_PRISMA_URL = "@STORAGE_POSTGRES_PRISMA_URL"
+  STORAGE_POSTGRES_URL_NON_POOLING = "@STORAGE_POSTGRES_URL_NON_POOLING"
