--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,42 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-#Ignore vscode AI rules
-.github\instructions\codacy.instructions.md
+# testing
+/coverage
 
-# Local Netlify folder
-.netlify
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env.local
+.env*.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# vercel
+.vercel
+
+# netlify
+.netlify/
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
