--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-# Vercel Storage - PostgreSQL (Neon)
-# Nota: Usar .env.local para credenciales locales
-# Nota: En producción (Vercel), configurar variables en Vercel Dashboard
-STORAGE_POSTGRES_PRISMA_URL="postgresql://[user]:[password]@[host]-pooler.c-3.us-east-1.aws.neon.tech/neondb?connect_timeout=15&sslmode=require"
-STORAGE_POSTGRES_URL_NON_POOLING="postgresql://[user]:[password]@[host].c-3.us-east-1.aws.neon.tech/neondb?sslmode=require"
+# Neon Database - PostgreSQL
+# Nota: .env.local sobrescribe estos valores en desarrollo local
+DATABASE_URL="postgresql://neondb_owner:npg_Lm3PMyGUgB1O@ep-lingering-wave-ahzbc1a7-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require"
+DATABASE_URL_UNPOOLED="postgresql://neondb_owner:npg_Lm3PMyGUgB1O@ep-lingering-wave-ahzbc1a7.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require"
