--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@types/node": "24.10.1",
     "@types/react": "19.2.4",
     "autoprefixer": "^10.4.16",
+    "eslint": "8.57.1",
+    "eslint-config-next": "16.0.2",
     "pg": "^8.16.3",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.11",
