--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,5 @@
 {
-  "projectId": "prj_webquote",
   "buildCommand": "npm run build",
   "framework": "nextjs",
-  "regions": ["sfo1"],
-  "env": {
-    "STORAGE_POSTGRES_PRISMA_URL": "@storage_postgres_prisma_url",
-    "STORAGE_POSTGRES_URL_NON_POOLING": "@storage_postgres_url_non_pooling"
-  }
+  "regions": ["sfo1"]
 }
