feat: add simple password authentication for admin panel

--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@
 # Nota: .env.local sobrescribe estos valores en desarrollo local
 DATABASE_URL="postgresql://neondb_owner:npg_Lm3PMyGUgB1O@ep-lingering-wave-ahzbc1a7-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require"
 DATABASE_URL_UNPOOLED="postgresql://neondb_owner:npg_Lm3PMyGUgB1O@ep-lingering-wave-ahzbc1a7.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require"
+
+# Admin Authentication
+# Contraseña para acceder al panel de administración
+# En producción, configura esto en las variables de entorno de Vercel
+ADMIN_PASSWORD="tu_contraseña_segura"
