feat(auth): Implementar Fase 7 - Filtrado de cotizacion por usuario + Middleware
Nuevas funcionalidades:
- Middleware de autenticacion para eliminar FOUC (Flash of Unauthenticated Content)
- Proteccion de rutas en tiempo de servidor (/, /paquete/*, /administrador)
- Verificacion de sesion antes de renderizar paginas
- Redireccion automatica de usuarios autenticados desde /login

Seguridad API:
- GET /api/quotation-config: Filtra por usuario autenticado
- GET /api/snapshots: Filtra por quotationConfigId del usuario
- GET /api/snapshots/all: Restringido a ADMIN/SUPER_ADMIN
- Respuestas HTTP correctas: 401 (no auth), 403 (sin permisos), 404 (no encontrado)

Filtrado por usuario:
- Usuarios CLIENT: Ven solo su cotizacion asignada (quotationAssignedId)
- Usuarios ADMIN/SUPER_ADMIN sin asignacion: Acceso a cotizacion global
- Snapshots filtrados automaticamente por quotationConfigId

Fixes:
- Login page: Anadido useSession() para detectar auth previa
- Middleware: Fix logica de rutas (pathname === '/' exacto)
- Paginas /paquete/*: Usar obtenerSnapshots() en lugar de obtenerSnapshotsCompleto()
- Homepage: Mensaje de error cuando usuario no tiene cotizacion asignada

Archivos modificados:
- src/middleware.ts (NUEVO): Proteccion de rutas server-side
- src/app/api/quotation-config/route.ts: Filtrado por usuario
- src/app/api/snapshots/route.ts: Filtrado por quotationConfigId
- src/app/api/snapshots/all/route.ts: Solo ADMIN/SUPER_ADMIN
- src/app/page.tsx: Manejo de errores de auth
- src/app/login/page.tsx: Deteccion de sesion previa
- src/app/paquete/*/page.tsx: Auth check simplificado
- docs/propuestas/PROPUESTA_AUTENTICACION_USUARIOS.md: Estado Fase 7

Resultado:
- Zero flash de contenido no autenticado
- Usuarios solo ven su cotizacion asignada
- APIs protegidas con verificacion de sesion
- Experiencia de usuario mejorada con redirects automaticos

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# build logs
+build.log
+build-output.txt
+
+# vscode
+.vscode/settings.json
